--- a/styles.css
+++ b/styles.css
@@ -11,5 +11,9 @@ body {
     color: #7C0CC7; /* Set the link color on hover */
   }
   
+  h1, h2, h3, h4, h5, h6 {
+    color: #131324; /* Set the title color */
+  }
+  
   /* Add more styles as needed */
-    
+      
